<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/rel_lay">


    <FrameLayout
        android:id="@+id/linear_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-6dp"
        android:layout_marginLeft="-6dp"
        android:layout_marginTop="-9dp"
        >

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_back_cups"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="1dp"
            android:layout_gravity="center"
           >

            <View
                android:layout_width="23dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginRight="4dp"
                android:background="@drawable/arrow"
                android:rotation="144.32"
                android:layout_marginEnd="4dp" />

            <View
                android:layout_width="35.5dp"
                android:layout_height="10dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/arrow" />

            <View
                android:layout_width="23dp"
                android:layout_height="10dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/arrow"
                android:rotation="-144.32"
                android:layout_marginEnd="4dp" />
        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/linear_cups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="-6dp"
        android:layout_marginRight="-6dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/circle_back_cups" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:srcCompat="@drawable/cup"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/Cups" />

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/jura_semibold"
            android:gravity="center_horizontal"
            android:text="@string/Points"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/choose_theme_btn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/union_pressed"
            android:fontFamily="@font/jura_semibold"
            android:gravity="center"
            android:text="@string/Choose_theme"
            android:textAllCaps="false"
            android:textSize="37sp"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/union_pressed"
            android:fontFamily="@font/jura_semibold"
            android:gravity="center"
            android:text="@string/Stats"
            android:textAllCaps="false"
            android:textSize="37sp"
            android:textColor="@color/white"
            app:backgroundTint="@null" />

    </LinearLayout>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <View
            android:layout_width="120dp"
            android:layout_height="60dp"

            android:layout_gravity="center_horizontal"
            android:background="@drawable/half_circle"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Frame_penalty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        >

        <View
            android:layout_width="117dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center"
            android:background="@drawable/penalty_area"
             />

        <View
            android:layout_width="234dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/penalty_area"
            />

        <View
            android:layout_marginTop="30dp"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle"
            />


    </FrameLayout>

    </FrameLayout>

</RelativeLayout>